# TWWHD-Randomizer

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  EditLocation.cpp  EditLocation.h  EditLocation.hpp  Import.cpp  Import.h  Import.hpp  LICENSE.txt  Location.cpp  Location.hpp  Locations.json  Locations.txt  Logic.cpp  Macros.json  Offsets.txt  Parse.cpp  Parse.hpp  README.md  Structs.hpp  Utility.h  Utility.hpp  dockerfile  item_names.txt  main.cpp  options.cpp  options.hpp  randomizer.cpp  randomizer.hpp  text_replacements.cpp  text_replacements.hpp  tweaks.cpp  tweaks.hpp  version.hpp.in
asm/: elf.py  (+13 more)
filetypes/: CMakeLists.txt  baseFiletype.hpp  bdt.cpp  bdt.hpp  bffnt.cpp  bffnt.hpp  bflim.cpp  bflim.hpp  bflyt.cpp  bflyt.hpp  bfres.cpp  bfres.hpp  charts.cpp  charts.hpp  dds.cpp  dds.hpp  dzx.cpp  dzx.hpp  elf.cpp  elf.hpp  events.cpp  events.hpp  jpc.cpp  jpc.hpp  msbp.cpp  msbp.hpp  msbt.cpp  msbt.hpp  sarc.cpp  sarc.hpp  wiiurpx.cpp  wiiurpx.hpp  yaz0.cpp  yaz0.hpp
filetypes/shared/: bfres_structs.hpp  elf_structs.hpp  gx2.hpp  lms.cpp  lms.hpp
filetypes/subfiles/: CMakeLists.txt  bftex.cpp  bftex.hpp
filetypes/texture/: CMakeLists.txt  addrlib.cpp  addrlib.hpp  formconv.cpp  formconv.hpp
filetypes/util/: elfUtil.cpp  elfUtil.hpp  msbtMacros.hpp
gui/: CMakeLists.txt  generate_qrc_file.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  option_descriptions.hpp  player_customization.cpp  randomizer_thread.cpp  randomizer_thread.hpp  set_font.h  tracker.cpp  tracker_area_label.cpp  tracker_area_widget.h  tracker_inventory_button.cpp  tracker_inventory_button.h  tracker_location_label.cpp  tracker_location_label.h  update_dialog_header.hpp
gui/desktop/: CMakeLists.txt  app.icns  com.github.superdude88.twwhd-randomizer.desktop  com.github.superdude88.twwhd-randomizer.metainfo.xml  generate_qrc_file.py  mac_user_instructions.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  option_descriptions.hpp  palette.cpp  palette.hpp  randomizer_thread.cpp  update_dialog_header.hpp
gui/desktop/tracker/: set_font.hpp  tracker.cpp  tracker_area_label.cpp  tracker_area_widget.cpp  tracker_area_widget.hpp  tracker_inventory_button.cpp  tracker_inventory_button.hpp  tracker_label.cpp  tracker_label.hpp  (+6 more)
gui/tracker/: set_font.h  set_font.hpp  tracker.cpp  tracker_area_label.cpp  tracker_area_label.h  tracker_area_label.hpp  tracker_area_widget.cpp  tracker_area_widget.h  tracker_area_widget.hpp  tracker_data.hpp  tracker_inventory_button.cpp  tracker_inventory_button.h  tracker_inventory_button.hpp  tracker_label.cpp  tracker_label.h  tracker_label.hpp  tracker_location_label.cpp  tracker_location_label.h  tracker_preferences_dialog.cpp  tracker_preferences_dialog.hpp  tracker_preferences_dialog.ui
gui/wiiu/: Button.cpp  Button.hpp  CMakeLists.txt  ConfirmMenu.cpp  ConfirmMenu.hpp  ExitMenu.cpp  ExitMenu.hpp  InstallMenu.cpp  Keyboard.cpp  LogConsole.cpp  LogConsole.hpp  OptionActions.cpp  OptionActions.hpp  Page.cpp  Page.hpp  SettingsMenu.cpp  SettingsMenu.hpp
libs/: AES.cpp  AES.h  AES.hpp  BS_thread_pool.hpp  CMakeLists.txt  Yaml.cpp  Yaml.hpp  base64pp.cpp  base64pp.hpp  custom-zlib.cpp  custom-zlib.h  hashing.hpp  jsonexcept.hpp  ryml.hpp  tinyxml2.cpp  tinyxml2.h  tinyxml2.hpp  yaml.cpp  yaml.h  yaml.hpp  zlib-ng.hpp
libs/hash-library/: sha1.cpp  sha1.h  sha256.h
libs/hashing/: sha1.cpp  sha256.cpp
libs/zlib-ng/: CMakeLists.txt  README.md  compress.c  deflate.h  deflate_medium.c  deflate_p.h  deflate_slow.c  inflate.c  trees.c  trees.h  zconf-ng.h.in  zlib-ng.h  zlib-ng.h.in  zutil.h
logic/: Area.cpp  Area.hpp  CMakeLists.txt  Debug.cpp  Debug.hpp  Dungeon.cpp  Dungeon.hpp  Entrance.cpp  Entrance.hpp  EntranceShuffle.cpp  EntranceShuffle.hpp  Fill.cpp  Fill.hpp  GameItem.cpp  GameItem.hpp  Generate.cpp  Generate.hpp  HintRegion.cpp  HintRegion.hpp  Hints.cpp  Hints.hpp  ItemPool.cpp  ItemPool.hpp  Location.cpp  Location.hpp  LocationManager.cpp  LocationManager.hpp  LogicTests.cpp  LogicTests.hpp  Macros.json  Plandomizer.cpp  Plandomizer.hpp  PoolFunctions.hpp  Random.cpp  Random.hpp  Requirements.cpp  Requirements.hpp  Search.cpp  Search.hpp  Setting.cpp  (+14 more)
logic/data/: area_names.yaml  color_presets.yaml  dungeon_entrance_info.yaml  entrance_shuffle_table.yaml  item_data.yaml  location_data.yaml  macros.yaml  plandomizer_example.yaml  world.yaml
logic/flatten/: CMakeLists.txt  bits.cpp  bits.hpp  flatten.cpp  flatten.hpp  simplify_algebraic.cpp  simplify_algebraic.hpp
nuspack/: CMakeLists.txt  appinfo.cpp  appinfo.hpp  packer.cpp  packer.hpp  types.hpp
nuspack/contents/: CMakeLists.txt  contentInfo.cpp  contentInfo.hpp  contents.cpp  contents.hpp
nuspack/crypto/: CMakeLists.txt  ContentHashes.cpp  ContentHashes.hpp  Encryption.cpp  Encryption.hpp  IV.hpp  Key.hpp
nuspack/fst/: CMakeLists.txt  FSTEntries.cpp  FSTEntries.hpp
nuspack/packaging/: CMakeLists.txt  Cert.hpp  ContentDetails.hpp  ContentRules.cpp  ContentRules.hpp  ContentRulesService.cpp  ContentRulesService.hpp  NUSPackage.cpp  NUSPackage.hpp  NUSPackageConfig.hpp  fst.cpp  fst.hpp  ticket.cpp  ticket.hpp  tmd.cpp  tmd.hpp
platform/: CMakeLists.txt  channel.cpp  channel.hpp  controller.cpp  controller.hpp  energy_saver.cpp  energy_saver.hpp  heap.cpp  heap.hpp  home.cpp  home.hpp  input.cpp  input.hpp  proc.cpp  proc.hpp  wiiutitles.cpp  wiiutitles.hpp
platform/gui/: Button.cpp  Button.hpp  CMakeLists.txt  ConfirmMenu.cpp  ConfirmMenu.hpp  ExitMenu.cpp  ExitMenu.hpp  InstallMenu.cpp  InstallMenu.hpp  Keyboard.cpp  Keyboard.hpp  LogConsole.cpp  OptionActions.cpp  OptionActions.hpp  Page.cpp  Page.hpp  SeedMenu.cpp  SeedMenu.hpp  SettingsMenu.cpp  SettingsMenu.hpp  TextWrap.cpp  TextWrap.hpp  screen.cpp  screen.hpp
server/filetypes/: CMakeLists.txt  bdt.cpp  bdt.hpp  bflim.cpp  bflim.hpp  bflyt.cpp  bflyt.hpp  bfres.cpp  bfres.hpp  charts.cpp  charts.hpp  dds.cpp  dds.hpp  dzx.cpp  dzx.hpp  elf.cpp  elf.hpp  events.cpp  events.hpp  jpc.cpp  jpc.hpp  msbp.cpp  msbp.hpp  msbt.cpp  msbt.hpp  sarc.cpp  sarc.hpp  wiiurpx.cpp  wiiurpx.hpp  yaz0.cpp  yaz0.hpp
(+312 files in other folders)
