cmake_minimum_required(VERSION 3.7)
if(CMAKE_VERSION VERSION_LESS "3.13")
	if (POLICY CMP0076)
		cmake_policy(SET CMP0076 OLD)
	endif()
	target_sources(wwhd_rando PRIVATE "libs/tinyxml2.cpp" "libs/Yaml.cpp" "libs/base64pp.cpp" "libs/AES.cpp" "libs/hashing/sha1.cpp" "libs/hashing/sha256.cpp")
else()
	cmake_policy(SET CMP0076 NEW)
	target_sources(wwhd_rando PRIVATE tinyxml2.cpp base64pp.cpp AES.cpp hashing/sha1.cpp hashing/sha256.cpp)
endif()

set(BUILD_SHARED_LIBS OFF)

# Modded zlib-ng for fast yaz0
option(WITH_GZFILEOP "Compile with support for gzFile related functions" OFF)
option(ZLIB_COMPAT "Compile with zlib compatible API" OFF)
option(ZLIB_ENABLE_TESTS "Build test binaries" OFF)
option(ZLIBNG_ENABLE_TESTS "Test zlib-ng specific API" OFF)
option(WITH_GTEST "Build gtest_zlib" OFF)
option(WITH_FUZZERS "Build test/fuzz" OFF)
option(WITH_BENCHMARKS "Build test/benchmarks" OFF)
option(WITH_BENCHMARK_APPS "Build application benchmarks" OFF)
option(WITH_OPTIM "Build with optimisation" ON)
option(WITH_REDUCED_MEM "Reduced memory usage for special cases (reduces performance)" OFF)
option(WITH_NEW_STRATEGIES "Use new strategies" ON)
if(DEFINED DEVKITPRO)
	option(WITH_NATIVE_INSTRUCTIONS "Instruct the compiler to use the full instruction set on this host (gcc/clang -march=native)" OFF)
    option(WITH_ALTIVEC "Build with AltiVec (VMX) optimisations for PowerPC" OFF)
    option(WITH_POWER8 "Build with optimisations for POWER8" OFF)
    option(WITH_POWER9 "Build with optimisations for POWER9" OFF)
else()
	option(WITH_NATIVE_INSTRUCTIONS "Instruct the compiler to use the full instruction set on this host (gcc/clang -march=native)" ON)
endif()
option(WITH_MAINTAINER_WARNINGS "Build with project maintainer warnings" OFF)
option(WITH_CODE_COVERAGE "Enable code coverage reporting" OFF)
option(WITH_INFLATE_STRICT "Build with strict inflate distance checking" OFF)
option(WITH_INFLATE_ALLOW_INVALID_DIST "Build with zero fill for inflate invalid distances" OFF)
option(WITH_UNALIGNED "Support unaligned reads on platforms that support it" ON)
add_compile_definitions(NO_GZIP=1 MAX_WBITS=12 DEF_WBITS=15 Z_TLS=)
add_subdirectory("zlib-ng")
# Add our patched code
target_sources(zlib PRIVATE "custom-zlib.cpp")

# Disable extra stuff for yaml-cpp
option(YAML_CPP_BUILD_CONTRIB OFF)
option(YAML_CPP_BUILD_TOOLS OFF)
option(YAML_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
option(YAML_CPP_BUILD_TESTS OFF)
option(YAML_CPP_INSTALL OFF)
option(YAML_MSVC_SHARED_RT OFF)
add_subdirectory("yaml-cpp")
