
if(FILL_TESTING)
  project(assumed_fill_test CXX)
  set(CMAKE_CXX_STANDARD 20)

  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -DJSON_NOEXCEPTION=1 -DJSON_USE_IMPLICIT_CONVERSIONS=0")

  if(ENABLE_DEBUG)
    message("Debugging is ON")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DENABLE_DEBUG")
  endif()

  add_executable(assumed_fill_test main.cpp GameItem.cpp Location.cpp World.cpp ../options.cpp ItemPool.cpp Area.cpp Fill.cpp Random.cpp Search.cpp SpoilerLog.cpp Debug.cpp Dungeon.cpp Generate.cpp)
else()
  cmake_minimum_required(VERSION 3.7)
  if(CMAKE_VERSION VERSION_LESS "3.13")
    if (POLICY CMP0076)
      cmake_policy(SET CMP0076 OLD)
    endif()
    target_sources(wwhd_rando_patch PRIVATE "logic/GameItem.cpp" "logic/Location.cpp" "logic/LocationManager.cpp")
  else()
    cmake_policy(SET CMP0076 NEW)
    target_sources(wwhd_rando_patch PRIVATE GameItem.cpp Location.cpp LocationManager.cpp)
  endif()
endif()
