cmake_minimum_required(VERSION 3.7)
if(CMAKE_VERSION VERSION_LESS "3.13")
	if (POLICY CMP0076)
		cmake_policy(SET CMP0076 OLD)
	endif()
	target_sources(wwhd_rando PRIVATE "server/filetypes/wiiurpx.cpp" "server/filetypes/yaz0.cpp" "server/filetypes/sarc.cpp" "server/filetypes/msbt.cpp" "server/filetypes/elf.cpp" "server/filetypes/events.cpp" "server/filetypes/bfres.cpp" "server/filetypes/jpc.cpp" "server/filetypes/dzx.cpp" "server/filetypes/charts.cpp" "server/filetypes/bflyt.cpp" "server/filetypes/util/elfUtil.cpp")
else()
	cmake_policy(SET CMP0076 NEW)
	target_sources(wwhd_rando PRIVATE wiiurpx.cpp yaz0.cpp sarc.cpp msbt.cpp elf.cpp events.cpp bfres.cpp jpc.cpp dzx.cpp charts.cpp bflyt.cpp util/elfUtil.cpp)
endif()

add_subdirectory("bflim")
